--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container-sm">
 
-    <h1>This is a list of Courses</h1>
+    <h1>This is a list of Courses-GitHub</h1>
 
     <table class="table table-striped table-bordered">
         <thead class="table-dark">
